syntax = "proto3";

package com.example.commonmodels.device;

import "google/protobuf/timestamp.proto";

option java_multiple_files = true;

message Device {
  string id = 1;
  string name = 2;
  string description = 3;
  string type = 4;
  StatusType status_type = 5;
  string user_id = 6;
  google.protobuf.Timestamp updated_at = 7;

  enum StatusType {
    STATUS_TYPE_UNSPECIFIED = 0;
    STATUS_TYPE_ONLINE = 1;
    STATUS_TYPE_OFFLINE = 2;
  }
}
