syntax = "proto3";

package com.example.commonmodels.device;

import "google/protobuf/timestamp.proto";

option java_multiple_files = true;

message DeviceUpdateNotification {
  string device_id = 1;
  string user_id = 2;
  google.protobuf.Timestamp timestamp = 3;
}
